deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-api-private-staging
  namespace: pos
  labels: {name: pos-api-private-staging, env: staging}
  annotations: null
spec:
  replicas: 1
  selector:
    matchLabels: {app: pos-api-private-staging, env: staging}
  template:
    metadata:
      name: pos-api-private-staging
      labels: {app: pos-api-private-staging, env: staging}
    spec:
      containers:
      - name: pos-api-private-staging
        image: gcr.io/dotz-dev-219021/next/pos-api-private:2.0.46-master
        volumeMounts:
        - {name: secret-volume, mountPath: /app/secrets}
        imagePullPolicy: Always
        resources:
          requests: {memory: 512Mi, cpu: 200m}
          limits: {memory: 3G, cpu: '1'}
        ports:
        - {name: http, containerPort: 80}
        - {name: https, containerPort: 443}
        livenessProbe:
          httpGet: {path: /liveness, port: 80}
          initialDelaySeconds: 120
          timeoutSeconds: 120
        readinessProbe:
          httpGet: {path: /liveness, port: 80}
          periodSeconds: 60
          timeoutSeconds: 120
          successThreshold: 1
          failureThreshold: 10
      volumes:
      - name: secret-volume
        secret: {secretName: pos-service-account}
      nodeSelector: {type: temporarios}
      
kubectl apply -f deployment-staging.yaml

-- ingress

cat ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pos
  namespace: pos
  annotations: {configuration.konghq.com: config, konghq.com/override: config, kubernetes.io/ingress.class: kong,
    konghq.com/https-redirect-status-code: '301', konghq.com/protocols: https, nginx.ingress.kubernetes.io/rewrite-target: /}
spec:
  tls:
  - hosts: [dev.dotznext.com]
    secretName: pos-dotznext-com
  rules:
  - host: dev.dotznext.com
    http:
      paths:
      - backend: {serviceName: pos-api-private, servicePort: 80}
        path: /pos/api/private
      - backend: {serviceName: pos-api-admin, servicePort: 80}
        path: /pos/api/admin
      - backend: {serviceName: pos-api-default, servicePort: 80}
        path: /pos/api/default
[Pipeline] sh
+ kubectl apply -f ingress.yaml
